--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "listingappbackend",
   "version": "1.0.0",
-  "main": "node api/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node api/index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
